--- a/Volt/tsconfig.json
+++ b/Volt/tsconfig.json
@@ -3,5 +3,13 @@
   "references": [
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" }
-  ]
+  ],
+  "compilerOptions": {
+    "target": "ES2020",
+    "module": "CommonJS",
+    "rootDir": "Client/src",
+    "outDir": "dist",
+    "esModuleInterop": true,
+    "strict": true
+  }
 }
