--- a/Client/package.json
+++ b/Client/package.json
@@ -5,10 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "lint": "eslint .",
+    "build": "vite build",
     "preview": "vite preview"
   },
-  
   "dependencies": {
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
